[package]
name = "vmodem99a"
version = "1.0.0"
edition = "2021"
description = "VModem Model 99/A - Virtual Modem Terminal"
authors = ["VModem Developer"]

[[bin]]
name = "vmodem99a"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
figlet-rs = "0.1"
crossterm = "0.27"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
indicatif = "0.17"
rustyline = "12.0"
url = "2.4"

[dependencies.rodio]
version = "0.17"
optional = true
features = ["wav"]

[features]
default = ["sound"]
sound = ["rodio"]
